BaseGL: Fix for event propagation where the ImageInport and ImageOutport dimensions does not match
BaseGL: ImageResample fix for empty inport on resize

Jenkins: Format fixes

--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -19,6 +19,7 @@ set(HEADER_FILES
     include/modules/basegl/datavisualizer/meshvisualizer.h
     include/modules/basegl/datavisualizer/volumeraycastvisualizer.h
     include/modules/basegl/datavisualizer/volumeslicevisualizer.h
+    include/modules/basegl/eventscaler.h
     include/modules/basegl/processors/axisalignedcutplane.h
     include/modules/basegl/processors/background.h
     include/modules/basegl/processors/cuberenderer.h
@@ -125,6 +126,7 @@ set(SOURCE_FILES
     src/datavisualizer/meshvisualizer.cpp
     src/datavisualizer/volumeraycastvisualizer.cpp
     src/datavisualizer/volumeslicevisualizer.cpp
+    src/eventscaler.cpp
     src/processors/axisalignedcutplane.cpp
     src/processors/background.cpp
     src/processors/cuberenderer.cpp
