Add volume normalization algorithm

--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -7,6 +7,7 @@ ivw_module(BaseGL)
 set(HEADER_FILES
     include/modules/basegl/algorithm/entryexitpoints.h
     include/modules/basegl/algorithm/imageconvolution.h
+    include/modules/basegl/algorithm/volumenormalization.h
     include/modules/basegl/baseglmodule.h
     include/modules/basegl/baseglmoduledefine.h
     include/modules/basegl/datastructures/linesettings.h
@@ -90,6 +91,7 @@ ivw_group("Header Files" ${HEADER_FILES})
 set(SOURCE_FILES
     src/algorithm/entryexitpoints.cpp
     src/algorithm/imageconvolution.cpp
+    src/algorithm/volumenormalization.cpp
     src/baseglmodule.cpp
     src/datastructures/linesettings.cpp
     src/datastructures/linesettingsinterface.cpp
@@ -231,6 +233,7 @@ set(SHADER_FILES
     glsl/volume_mapping.frag
     glsl/volumegradientmagnitude.frag
     glsl/volumemerger.frag
+    glsl/volumenormalization.frag
     glsl/volumeslice.frag
 )
 ivw_group("Shader Files" ${SHADER_FILES})
