Volume reduction via compute shader

--- a/tests/integrationtests/CMakeLists.txt
+++ b/tests/integrationtests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCE_FILES
     processorcreation-test.cpp
     propertycreation-test.cpp
     volume-test.cpp
+    volume-reduction-test.cpp
     shader-test.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
