--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -6,6 +6,7 @@ ivw_module(BaseGL)
 # Add header files
 set(HEADER_FILES
     include/modules/basegl/algorithm/entryexitpoints.h
+    include/modules/basegl/algorithm/gpureduction.h
     include/modules/basegl/algorithm/imageconvolution.h
     include/modules/basegl/algorithm/volumenormalization.h
     include/modules/basegl/baseglmodule.h
@@ -76,6 +77,7 @@ set(HEADER_FILES
     include/modules/basegl/processors/volumeprocessing/volumemapping.h
     include/modules/basegl/processors/volumeprocessing/volumemerger.h
     include/modules/basegl/processors/volumeprocessing/volumenormalizationprocessor.h
+    include/modules/basegl/processors/volumeprocessing/volumereductionprocessor.h
     include/modules/basegl/processors/volumeprocessing/volumeregionshrink.h
     include/modules/basegl/processors/volumeprocessing/volumeshader.h
     include/modules/basegl/processors/volumeraycaster.h
@@ -91,6 +93,7 @@ ivw_group("Header Files" ${HEADER_FILES})
 # Add source files
 set(SOURCE_FILES
     src/algorithm/entryexitpoints.cpp
+    src/algorithm/gpureduction.cpp
     src/algorithm/imageconvolution.cpp
     src/algorithm/volumenormalization.cpp
     src/baseglmodule.cpp
@@ -160,6 +163,7 @@ set(SOURCE_FILES
     src/processors/volumeprocessing/volumemapping.cpp
     src/processors/volumeprocessing/volumemerger.cpp
     src/processors/volumeprocessing/volumenormalizationprocessor.cpp
+    src/processors/volumeprocessing/volumereductionprocessor.cpp
     src/processors/volumeprocessing/volumeregionshrink.cpp
     src/processors/volumeprocessing/volumeshader.cpp
     src/processors/volumeraycaster.cpp
@@ -207,6 +211,7 @@ set(SHADER_FILES
     glsl/lighting/lightvolumeblend.frag
     glsl/lighting/lightvolumeblend.geom
     glsl/lighting/lightvolumeblend.vert
+    glsl/reduction/reduction.comp
     glsl/linerenderer.frag
     glsl/linerenderer.geom
     glsl/linerenderer.vert
