--- a/modules/webbrowser/webhelper/resources/mac/helper-info.plist
+++ b/modules/webbrowser/webhelper/resources/mac/helper-info.plist
@@ -9,11 +9,11 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.inviwo.helper</string>
+	<string>org.inviwo.helper${BUNDLE_ID_SUFFIX}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Inviwo</string>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
@@ -25,8 +25,6 @@
 	</dict>
 	<key>LSFileQuarantineEnabled</key>
 	<true/>
-	<key>LSMinimumSystemVersion</key>
-	<string>10.9.0</string>
 	<key>LSUIElement</key>
 	<string>1</string>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
