--- a/modules/opengl/CMakeLists.txt
+++ b/modules/opengl/CMakeLists.txt
@@ -123,6 +123,7 @@ set(SHADER_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/classification.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/compositing.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/depth.glsl
+    ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/glyphs.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/gradients.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/intersection.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/isosurface.glsl
