Python: updates shared_ptr processors
Using the pybind11 smart_holder branch from google, to properly manage lifetime for our python processors.
Added support for VolumePy Volume representation (holding the data as a numpy object) , and converters from VolumePy to VolumeRAM and VolumeGL,  Hence one can go from a numpy array directly to opengl without having a VolumeRAM copy.

--- a/modules/python3/CMakeLists.txt
+++ b/modules/python3/CMakeLists.txt
@@ -8,6 +8,7 @@ set(HEADER_FILES
     include/modules/python3/processors/numpymeshcreatetest.h
     include/modules/python3/processors/numpyvolume.h
     include/modules/python3/processors/pythonscriptprocessor.h
+    include/modules/python3/processortrampoline.h
     include/modules/python3/pybindutils.h
     include/modules/python3/pyportutils.h
     include/modules/python3/python3module.h
@@ -19,6 +20,7 @@ set(HEADER_FILES
     include/modules/python3/pythonprocessorfolderobserver.h
     include/modules/python3/pythonscript.h
     include/modules/python3/pyutils.h
+    include/modules/python3/volumepy.h
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
@@ -27,6 +29,7 @@ set(SOURCE_FILES
     src/processors/numpymeshcreatetest.cpp
     src/processors/numpyvolume.cpp
     src/processors/pythonscriptprocessor.cpp
+    src/processortrampoline.cpp
     src/pybindutils.cpp
     src/pyportutils.cpp
     src/python3module.cpp
@@ -37,6 +40,7 @@ set(SOURCE_FILES
     src/pythonprocessorfolderobserver.cpp
     src/pythonscript.cpp
     src/pyutils.cpp
+    src/volumepy.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
@@ -81,6 +85,8 @@ target_link_libraries(inviwo-module-python3 PUBLIC
 target_include_directories(inviwo-module-python3 PUBLIC
     ${IVW_EXTENSIONS_DIR}/pybind11/include
 )
+target_compile_definitions(inviwo-module-python3 PUBLIC PYBIND11_USE_SMART_HOLDER_AS_DEFAULT)
+
 
 add_subdirectory(bindings)
 
