Freetype: control which extensions we enable

--- a/modules/fontrendering/ext/freetype/CMakeLists.txt
+++ b/modules/fontrendering/ext/freetype/CMakeLists.txt
@@ -1,6 +1,21 @@
 # Use our own packaging/install locations
 set(SKIP_INSTALL_ALL TRUE)
 
+
+# Try to explicity control what dependencies freetype uses. 
+# Otherwise it will go ahread and depend on what ever it finds.
+set(FT_WITH_ZLIB ON)
+set(FT_WITH_BZIP2 ON)
+set(FT_WITH_PNG ON)
+set(FT_WITH_HARFBUZZ OFF)
+set(FT_WITH_BROTLI OFF)
+
+set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB OFF)
+set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 OFF)
+set(CMAKE_DISABLE_FIND_PACKAGE_PNG OFF)
+set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ON)
+set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ON)
+
 add_subdirectory(freetype)
 ivw_get_targets_in_dir_recursive(targets ${CMAKE_CURRENT_SOURCE_DIR})
 ivw_suppress_compiler_warnings(${targets})
