cmake: Reflect both internal vcpkg updates and vcpkg glm updates.
glm update: https://github.com/microsoft/vcpkg/commit/307ac18b08e4125d3c521a86b7d7b317629be277
vcpkg update: https://github.com/microsoft/vcpkg/commit/1bb5ea10a3ff03783b37369eb5180a50557f3b0f

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -774,7 +774,7 @@ target_compile_definitions(inviwo-core
 target_link_libraries(inviwo-core 
     PUBLIC
         ticpp
-        glm
+        glm::glm
         inviwo::tclap
         inviwo::warn
         inviwo::sml
