Core: bitset implementation using CRoaring

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -19,6 +19,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/common/modulemanager.h
     ${IVW_INCLUDE_DIR}/inviwo/core/common/runtimemoduleregistration.h
     ${IVW_INCLUDE_DIR}/inviwo/core/common/version.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/bitset.h
     ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/buffer/buffer.h
     ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/buffer/bufferram.h
     ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/buffer/bufferramprecision.h
@@ -383,6 +384,7 @@ set(SOURCE_FILES
     common/moduleaction.cpp
     common/modulemanager.cpp
     common/version.cpp
+    datastructures/bitset.cpp
     datastructures/buffer/buffer.cpp
     datastructures/buffer/bufferram.cpp
     datastructures/buffer/bufferrepresentation.cpp
@@ -681,6 +683,7 @@ else()
 endif()
 
 set(TEST_FILES
+    tests/unittests/bitset-test.cpp
     tests/unittests/brickiterator-test.cpp
     tests/unittests/colorconversion-test.cpp
     tests/unittests/commandlineparser-test.cpp
