DataFrame: MetaData for DataFrame columns
* support for overriding column min/max range

--- a/modules/dataframe/CMakeLists.txt
+++ b/modules/dataframe/CMakeLists.txt
@@ -24,6 +24,8 @@ set(HEADER_FILES
     include/inviwo/dataframe/processors/volumesequencetodataframe.h
     include/inviwo/dataframe/processors/volumetodataframe.h
     include/inviwo/dataframe/properties/colormapproperty.h
+    include/inviwo/dataframe/properties/columnmetadatalistproperty.h
+    include/inviwo/dataframe/properties/columnmetadataproperty.h
     include/inviwo/dataframe/properties/columnoptionproperty.h
     include/inviwo/dataframe/properties/dataframecolormapproperty.h
     include/inviwo/dataframe/properties/optionconverter.h
@@ -51,6 +53,8 @@ set(SOURCE_FILES
     src/processors/volumesequencetodataframe.cpp
     src/processors/volumetodataframe.cpp
     src/properties/colormapproperty.cpp
+    src/properties/columnmetadatalistproperty.cpp
+    src/properties/columnmetadataproperty.cpp
     src/properties/columnoptionproperty.cpp
     src/properties/dataframecolormapproperty.cpp
     src/properties/optionconverter.cpp
