Core: Added some support for specifying units and propagating them. Uses the LLNL/Units lib to parse and do runtime unit operations.
Also use string_view in most property constructors.

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "ext/span/span"]
 	path = ext/span/span
 	url = https://github.com/inviwo/span.git
+[submodule "ext/units/units"]
+	path = ext/units/units
+	url = https://github.com/LLNL/units.git
